--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -145,5 +145,5 @@
       "source.organizeImports": "explicit"
     }
   },
-  "workbench.colorTheme": "Nightfox"
+  "workbench.colorTheme": "Bushland"
 }
